# QueueSmart-DSA-Project

./: .gitignore  CMakeLists.txt  README.md
frontend/: index.html  login.html  register.html
frontend/css/: style.css
frontend/dashboard/: book.html  index.html  payment.html  profile.html  queue.html  receipt.html
frontend/js/: main.js
include/DataStructures/: LinkedList.hpp  Queue.hpp  Stack.hpp  Token.hpp  User.hpp
include/Handlers/: AuthHandlers.hpp  QueueHandlers.hpp  UserHandlers.hpp
include/Services/: AuthService.hpp  QueueManager.hpp
src/: main.cpp
src/Handlers/: AuthHandlers.cpp  QueueHandlers.cpp  UserHandlers.cpp
src/Services/: AuthService.cpp  QueueManager.cpp
